# ticket_sales_service

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: example_clients.csv
docs/: logic.md  specs.md  stages.md  workflow.md
src/: main.py
src/db/: connection.py  schema.sql
src/models/: ticket.py
src/services/: pdf_generator.py  ticket_creator.py
src/utils/: boot.py  calculator.py  logger.py
tests/: conftest.py  test_ticket.py  test_total.py
