[project]
name = "ticket-sales-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fpdf>=1.7.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "notebook>=7.4.4",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a14",
]
